--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -1,2 +1,2 @@
 # install models
-install (DIRECTORY ${CMAKE_SOURCE_DIR}/Example/Model DESTINATION ${CMAKE_INSTALL_PREFIX}/share/Pacer)
+install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Model DESTINATION ${CMAKE_INSTALL_PREFIX}/share/Pacer)
