--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,3 +1,5 @@
+option(USE_GTEST "Use the GTest sesting system for Regression testing pacer?" ON)
+
 file(GLOB sub-dir "*")
 foreach(dir ${sub-dir})
   if(IS_DIRECTORY ${dir})
