--- a/Test/Walk/CMakeLists.txt
+++ b/Test/Walk/CMakeLists.txt
@@ -13,5 +13,5 @@ else()
 endif()
 
 get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
-add_test(NAME ${TEST_BIN_NAME} COMMAND ${TEST_BIN_NAME} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/Example/Demo/${DIR_NAME})
+add_test(NAME ${TEST_BIN_NAME} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${TEST_BIN_NAME} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/Example/Demo/${DIR_NAME})
 add_dependencies(regression-test ${TEST_BIN_NAME})
