updated Gazebo build

--- a/CMakeModules/setup.sh.in
+++ b/CMakeModules/setup.sh.in
@@ -10,4 +10,4 @@ export PACER_COMPONENT_PATH=@CMAKE_CURRENT_BINARY_DIR@/Plugin/Component
 export PACER_SIMULATOR_PATH=@CMAKE_CURRENT_BINARY_DIR@/Plugin/Simulator
 
 export GAZEBO_MODEL_PATH=$PACER_HOME/Example/Model:$GAZEBO_MODEL_PATH
-export GAZEBO_PLUGIN_PATH=@CMAKE_CURRENT_BINARY_DIR@/Plugin/Simulator:$GAZEBO_PLUGIN_PATH
+export GAZEBO_PLUGIN_PATH=@CMAKE_CURRENT_BINARY_DIR@/Plugin/Simulator
