--- a/Plugin/Simulator/CMakeLists.txt
+++ b/Plugin/Simulator/CMakeLists.txt
@@ -1,8 +1,9 @@
 # Moby Interface
 add_library(PacerMobyPlugin MODULE ${CMAKE_CURRENT_SOURCE_DIR}/moby.cpp)
 # osg
-option(USE_OSG_DISPLAY "Display Visualizations?" OFF)
-IF(USE_OSG_DISPLAY)
+option(USE_DISPLAY "Display Visualizations?" OFF)
+IF(USE_DISPLAY)
+    add_definitions (-DUSE_OSG_DISPLAY)
 #find OSG
   find_package (osg)
   find_package (osgViewer)
@@ -22,9 +23,8 @@ IF(USE_OSG_DISPLAY)
     target_link_libraries (PacerMobyPlugin ${OSGUTIL_LIBRARIES})
     target_link_libraries (PacerMobyPlugin ${OSGMANIPULATOR_LIBRARIES})
     target_link_libraries (PacerMobyPlugin OpenThreads)
-    add_definitions (-DUSE_OSG_DISPLAY)
   ENDIF(OSG_FOUND)
-ENDIF(USE_OSG_DISPLAY)
+ENDIF(USE_DISPLAY)
 target_link_libraries (PacerMobyPlugin ${REQLIBS})
 
 # Gazebo Interface
