--- a/Plugin/Component/inverse-dynamics/CMakeLists.txt
+++ b/Plugin/Component/inverse-dynamics/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_library(inverse-dynamics MODULE inverse-dynamics.cpp)
+add_library(inverse-dynamics MODULE plugin.cpp)
 target_link_libraries(inverse-dynamics ${REQLIBS})
+
+
+# Moby Interface
+add_library(TestPlugin MODULE test.cpp)
+target_link_libraries (TestPlugin ${REQLIBS})
