updated gait-planner to produce flight phase and stance phase base velocities

--- a/Plugin/Simulator/CMakeLists.txt
+++ b/Plugin/Simulator/CMakeLists.txt
@@ -11,6 +11,7 @@ IF(USE_DISPLAY)
   find_package (osgGA)
   find_package (osgFX)
   find_package (osgUtil)
+  find_package (osgText)
   find_package (OpenThreads)
   link_directories(${OSG_LIBRARY_DIRS})
   include_directories(${OSG_INCLUDE_DIR})
@@ -21,6 +22,7 @@ IF(USE_DISPLAY)
     target_link_libraries (PacerMobyPlugin ${OSGGA_LIBRARIES})
     target_link_libraries (PacerMobyPlugin ${OPENTHREADS_LIBRARY})
     target_link_libraries (PacerMobyPlugin ${OSGUTIL_LIBRARIES})
+    target_link_libraries (PacerMobyPlugin ${OSGTEXT_LIBRARIES})
     target_link_libraries (PacerMobyPlugin ${OSGMANIPULATOR_LIBRARIES})
     target_link_libraries (PacerMobyPlugin OpenThreads)
   ENDIF(OSG_FOUND)
