Removing inverse dynamics test

--- a/Plugin/Component/inverse-dynamics/CMakeLists.txt
+++ b/Plugin/Component/inverse-dynamics/CMakeLists.txt
@@ -3,8 +3,8 @@ target_link_libraries(inverse-dynamics ${REQLIBS})
 
 
 # Moby Interface
-add_library(TestPlugin MODULE test.cpp)
-target_link_libraries (TestPlugin ${REQLIBS})
+#add_library(TestPlugin MODULE test.cpp)
+#target_link_libraries (TestPlugin ${REQLIBS})
 
 add_definitions (-DUSE_OSG_DISPLAY)
 #find OSG
@@ -18,12 +18,12 @@ find_package (OpenThreads)
 link_directories(${OSG_LIBRARY_DIRS})
 include_directories(${OSG_INCLUDE_DIR})
 IF(OSG_FOUND)
-target_link_libraries (TestPlugin ${OSG_LIBRARIES})
-target_link_libraries (TestPlugin ${OSGVIEWER_LIBRARIES})
-target_link_libraries (TestPlugin ${OSGDB_LIBRARIES})
-target_link_libraries (TestPlugin ${OSGGA_LIBRARIES})
-target_link_libraries (TestPlugin ${OPENTHREADS_LIBRARY})
-target_link_libraries (TestPlugin ${OSGUTIL_LIBRARIES})
-target_link_libraries (TestPlugin ${OSGMANIPULATOR_LIBRARIES})
-target_link_libraries (TestPlugin OpenThreads)
+#target_link_libraries (TestPlugin ${OSG_LIBRARIES})
+#target_link_libraries (TestPlugin ${OSGVIEWER_LIBRARIES})
+#target_link_libraries (TestPlugin ${OSGDB_LIBRARIES})
+#target_link_libraries (TestPlugin ${OSGGA_LIBRARIES})
+#target_link_libraries (TestPlugin ${OPENTHREADS_LIBRARY})
+#target_link_libraries (TestPlugin ${OSGUTIL_LIBRARIES})
+#target_link_libraries (TestPlugin ${OSGMANIPULATOR_LIBRARIES})
+#target_link_libraries (TestPlugin OpenThreads)
 ENDIF(OSG_FOUND)
