updated monte-carlo files

--- a/Plugin/Component/monte-carlo-simulation/CMakeLists.txt
+++ b/Plugin/Component/monte-carlo-simulation/CMakeLists.txt
@@ -14,7 +14,7 @@ include_directories(${BOOST_INCLUDE_DIR})
   add_executable(sample.bin Sample.cpp)
 
   target_link_libraries(sample.bin ${REQLIBS} boost_program_options MobyDriver)
-  IF(USE_OSG_DISPLAY)
+  IF(USE_DISPLAY)
     #find OSG
     find_package (osg)
     find_package (osgViewer)
@@ -36,4 +36,4 @@ include_directories(${BOOST_INCLUDE_DIR})
       target_link_libraries (sample.bin OpenThreads)
       add_definitions (-DUSE_OSG_DISPLAY)
     ENDIF(OSG_FOUND)
-  ENDIF(USE_OSG_DISPLAY)
+  ENDIF(USE_DISPLAY)
