--- a/Plugin/Simulator/CMakeLists.txt
+++ b/Plugin/Simulator/CMakeLists.txt
@@ -44,4 +44,4 @@ IF(GAZEBO_FOUND)
 ENDIF(GAZEBO_FOUND)
 ENDIF(USE_GAZEBO)
 
-install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/Pacer)
+#install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/Pacer)
