--- a/Plugin/Component/monte-carlo-simulation/CMakeLists.txt
+++ b/Plugin/Component/monte-carlo-simulation/CMakeLists.txt
@@ -1,8 +1,13 @@
 
+find_package(reveal REQUIRED)
+link_directories(${REVEAL_LIBRARY_DIRS})
+include_directories(${REVEAL_INCLUDE_DIR})
+
+
 option(BUILD_MONTECARLO "Build Monte carlo simulaton method plugin?" OFF)
 if(BUILD_MONTECARLO)
-  add_library(monte-carlo-simulation MODULE simulate.cpp)
-  target_link_libraries(monte-carlo-simulation ${REQLIBS})
+  add_library(monte-carlo-simulation MODULE simulate.cpp exchange.cpp)
+  target_link_libraries(monte-carlo-simulation ${REQLIBS} reveal_core)
 endif(BUILD_MONTECARLO)
 
 #find BOOST libraries
@@ -40,3 +45,5 @@ include_directories(${BOOST_INCLUDE_DIR})
   
   add_library(test-probability MODULE pendulum/pendulum-init.cpp)
   target_link_libraries(test-probability ${REQLIBS})
+
+
