--- a/Plugin/Component/mc-service/messages/CMakeLists.txt
+++ b/Plugin/Component/mc-service/messages/CMakeLists.txt
@@ -39,5 +39,8 @@ if(USE_PROTOBUF)
   set_target_properties( ${PROJECT_NAME} PROPERTIES SOVERSION ${REVEAL_MAJOR_VERSION} VERSION ${REVEAL_VERSION_FULL} )
   install( TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_CURRENT_BINARY_DIR} COMPONENT shlib )
   install( FILES ${PROTO_HDRS} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} COMPONENT headers )
+
+  link_directories(${CMAKE_CURRENT_BINARY_DIR})
+
 endif(USE_PROTOBUF)
 
