--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,13 +113,20 @@ file(GLOB SOURCES
   "src/*.cpp"
 )
 
-file(GLOB MAIN_SOURCES
-"src/main/*.cpp"
+set(DRIVER_SOURCES
+  src/main/driver.cpp
 )
-add_executable(pacer-driver ${SOURCES}  ${MAIN_SOURCES})
-target_link_libraries(pacer-driver ${LIBS})
+
+set(MAIN_SOURCES
+  src/main/main.cpp
+)
+add_library(PacerDriver ${SOURCES}  ${DRIVER_SOURCES})
+target_link_libraries(PacerDriver ${LIBS})
+
+add_executable(pacer-main ${MAIN_SOURCES})
+target_link_libraries(pacer-main PacerDriver)
 # install Pacer binary
-set_target_properties(pacer-driver PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+set_target_properties(PacerDriver PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 #install(TARGETS pacer-driver DESTINATION bin)
 
 add_library(Pacer ${SOURCES})
